--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                             <a
 									class="dropdown-item"
 									target="_blank"
-									href="#"
+									href="https://eswar3008.github.io/Goal2-SDG/"
 									>GOAL 2</a
 								>
 								<a
