--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -127,7 +127,7 @@
 								<a
 									class="dropdown-item"
 									target="_blank"
-									href="https://bhagalpur.iiitiannetwork.com"
+									href="https://eswar3008.github.io/Goal3-SDG/"
 									>GOAL 3</a
 								>
 								<a
