--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 <ul>
                     <li><a target="_blank" href="https://home%20sdg%20.com/">Home</a></li>
                     
-                    <li><a href="https://JEE Counselling SDG.com/">SDG Film Festival</a></li>
+                    <li><a href="https://eswar3008.github.io/SDG-FILM-FESTIVAL/">SDG Film Festival</a></li>
                     <li><a href="https://eswar3008.github.io/2030-Agenda/">Agenda 2030/services</a></li>
                     
                     <li class="nav-item dropdown">
