--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         <div class="container-fluid d-flex">
 
             <div class="logo mr-auto">
-                <a target="_blank" href="https://home%20sdg%20.com/"><img src="SDG.png" alt="" class="img-fluid"></a>
+                <a target="_blank" href="https://eswar3008.github.io/Home-SDG/"><img src="SDG.png" alt="" class="img-fluid"></a>
             </div>
 
             <nav class="nav-menu d-none d-lg-block">
@@ -651,9 +651,9 @@
                     <div class="col-lg-3 col-md-6 footer-links" data-aos="fade-up" data-aos-delay="200">
                         <h4>Useful Links</h4>
                         <ul>
-                            <li><i class="bx bx-chevron-right"></i> <a href="https://home%20sdg%20.com/">Home</a></li>
+                            <li><i class="bx bx-chevron-right"></i> <a href="https://eswar3008.github.io/Home-SDG/">Home</a></li>
                             <li><i class="bx bx-chevron-right"></i> <a href="https://eswar3008.github.io/2030-Agenda/">Agenda 2030/services</a></li>
-                            <li><i class="bx bx-chevron-right"></i> <a href="https://home%20sdg%20.com/">All SDG GOALS</a></li>
+                            <li><i class="bx bx-chevron-right"></i> <a href="https://eswar3008.github.io/Home-SDG/">All SDG GOALS</a></li>
                             <li><i class="bx bx-chevron-right"></i> <a href="https://eswar3008.github.io/contact-SDG">Contact Us</a></li>
                         </ul>
                     </div>
