--- a/index.html
+++ b/index.html
@@ -653,7 +653,7 @@
                         <ul>
                             <li><i class="bx bx-chevron-right"></i> <a href="https://eswar3008.github.io/Home-SDG/">Home</a></li>
                             <li><i class="bx bx-chevron-right"></i> <a href="https://eswar3008.github.io/2030-Agenda/">Agenda 2030/services</a></li>
-                            <li><i class="bx bx-chevron-right"></i> <a href="https://eswar3008.github.io/Home-SDG/">All SDG GOALS</a></li>
+                            <li><i class="bx bx-chevron-right"></i> <a href="https://eswar3008.github.io/Goal2-SDG/">All SDG GOALS</a></li>
                             <li><i class="bx bx-chevron-right"></i> <a href="https://eswar3008.github.io/contact-SDG">Contact Us</a></li>
                         </ul>
                     </div>
