--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
             <nav class="nav-menu d-none d-lg-block">
                 <ul>
-                    <li><a target="_blank" href="https://home%20sdg%20.com/">Home</a></li>
+                    <li><a target="_blank" href="https://eswar3008.github.io/Home-SDG/">Home</a></li>
                     
                     <li><a href="https://eswar3008.github.io/SDG-FILM-FESTIVAL/">SDG Film Festival</a></li>
                     <li><a href="https://eswar3008.github.io/2030-Agenda/">Agenda 2030/services</a></li>
